tests/ui/substrate/definition/fail_invalid_items.stderr
error: only methods are supported in trait definitions
 --> tests/ui/substrate/definition/fail_invalid_items.rs:3:5
  |
3 |     const INVALID_ITEM: u32 = 123;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
