tests/ui/substrate/definition/fail_invalid_items.rs
#[obce::definition]
pub trait Trait {
    const INVALID_ITEM: u32 = 123;
}

fn main() {}
